styled submit button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1>Abstract | Help Center</h1>
             </div>
             <div class="header-end">
-                <button>Submit a request</button>
+                <button class="submit-btn">Submit a request</button>
                 <button>Sign in</button>
             </div>
         </header>
