Added a comment to demo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <header>
+            <!-- This will be pushed now. -->
             <div class="header-start">
                 <p>Icon</p>
                 <h1>Abstract | Help Center</h1>
