--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Abstract</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./src/styles.css" />
     </head>
     <body>
         <header>
@@ -136,7 +136,7 @@
                 <nav>
                     <h3>Company</h3>
                     <ul>
-                        <li>About Us</li>
+                        <li><a href="./src/about.html"> About Us </a></li>
                         <li>Careers</li>
                         <li>Legal</li>
                         <li>
