feature/ comment test

--- a/index.html
+++ b/index.html
@@ -1,156 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Abstract</title>
-        <link rel="stylesheet" href="./src/styles.css" />
-    </head>
-    <body>
-        <header>
-            <!-- This will be pushed now. -->
-            <div class="header-start">
-                <p>Icon</p>
-                <h1>Abstract | Help Center</h1>
-            </div>
-            <div class="header-end">
-                <button class="submit-btn">Submit a request</button>
-                <button class="sign-in-btn">Sign in</button>
-            </div>
-        </header>
-        <main>
-            <section class="hero">
-                <h2>How can we help?</h2>
-                <input type="text" placeholder="Search" />
-            </section>
-            <section class="services">
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D4GACXWCRKK6JHQ730XD"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Using Abstract</h3>
-                        <p>
-                            Abstract lets you manage, version, and document your
-                            designs in one place.
-                        </p>
-                        <a href="">Learn More →</a>
-                    </div>
-                </div>
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D45NKFCN3388ZCBJB878"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Manage your account</h3>
-                        <p>
-                            Configure your account settings, such as your email,
-                            profile details, and password.
-                        </p>
-                        <a href="">Learn More →</a>
-                    </div>
-                </div>
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D3M8CRR0C2V5GREVR6HK"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Manage organizations, teams, and projects</h3>
-                        <p>
-                            Use Abstract organizations, teams, and projects to
-                            organize your people and your work.
-                        </p>
-                        <a href="">Learn More →</a>
-                    </div>
-                </div>
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D38K1S1M9WKWSQZE62YE"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Manage billing</h3>
-                        <p>Change subscriptions and payment details.</p>
-                        <a href="">Learn More → </a>
-                    </div>
-                </div>
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D3S3QY5190TZE3H8ZSVK"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Authenticate to Abstract</h3>
-                        <p>
-                            Set up and configure SSO, SCIM, and Just-in-Time
-                            provisioning.
-                        </p>
-                        <a href="">Learn More →</a>
-                    </div>
-                </div>
-                <div class="service">
-                    <img
-                        src="https://help.abstract.com/hc/theming_assets/01HZH4D3G4S2K93BN3WJPT8600"
-                        alt=""
-                    />
-                    <div class="service-text">
-                        <h3>Abstract support</h3>
-                        <p>et in touch with a human.</p>
-                        <a href="">Learn More →</a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="footer-nav">
-                <nav>
-                    <h3>Abstract</h3>
-                    <ul>
-                        <li>Start trial</li>
-                        <li>Pricing</li>
-                        <li>Download</li>
-                    </ul>
-                </nav>
-                <nav>
-                    <h3>Resources</h3>
-                    <ul>
-                        <li>Blog</li>
-                        <li>Help Center</li>
-                        <li>Release Notes</li>
-                        <li>Status</li>
-                    </ul>
-                </nav>
-                <nav>
-                    <h3>Community</h3>
-                    <ul>
-                        <li>Twitter</li>
-                        <li>LinkedIn</li>
-                        <li>Facebook</li>
-                        <li>Dribble</li>
-                        <li>Podcast</li>
-                    </ul>
-                </nav>
-                <nav>
-                    <h3>Company</h3>
-                    <ul>
-                        <li><a href="./src/about.html"> About Us </a></li>
-                        <li>Careers</li>
-                        <li>Legal</li>
-                        <li>
-                            <h4>Contact Us</h4>
-                            <p>info@abstract.com</p>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="footer-copyright">
-                <p>© Copyright 2024</p>
-                <p>Abstract Studio Design, Inc.</p>
-                <p>All rights reserved</p>
-            </div>
-        </footer>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Abstract</title>
+    <link rel="stylesheet" href="./src/styles.css" />
+  </head>
+  <body>
+    <!-- this is just a comment to practice/ Sofia -->
+    <header>
+      <!-- This will be pushed now. -->
+      <div class="header-start">
+        <p>Icon</p>
+        <h1>Abstract | Help Center</h1>
+      </div>
+      <div class="header-end">
+        <button class="submit-btn">Submit a request</button>
+        <button class="sign-in-btn">Sign in</button>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <h2>How can we help?</h2>
+        <input type="text" placeholder="Search" />
+      </section>
+      <section class="services">
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D4GACXWCRKK6JHQ730XD"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Using Abstract</h3>
+            <p>
+              Abstract lets you manage, version, and document your designs in
+              one place.
+            </p>
+            <a href="">Learn More →</a>
+          </div>
+        </div>
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D45NKFCN3388ZCBJB878"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Manage your account</h3>
+            <p>
+              Configure your account settings, such as your email, profile
+              details, and password.
+            </p>
+            <a href="">Learn More →</a>
+          </div>
+        </div>
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D3M8CRR0C2V5GREVR6HK"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Manage organizations, teams, and projects</h3>
+            <p>
+              Use Abstract organizations, teams, and projects to organize your
+              people and your work.
+            </p>
+            <a href="">Learn More →</a>
+          </div>
+        </div>
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D38K1S1M9WKWSQZE62YE"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Manage billing</h3>
+            <p>Change subscriptions and payment details.</p>
+            <a href="">Learn More → </a>
+          </div>
+        </div>
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D3S3QY5190TZE3H8ZSVK"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Authenticate to Abstract</h3>
+            <p>
+              Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+            </p>
+            <a href="">Learn More →</a>
+          </div>
+        </div>
+        <div class="service">
+          <img
+            src="https://help.abstract.com/hc/theming_assets/01HZH4D3G4S2K93BN3WJPT8600"
+            alt=""
+          />
+          <div class="service-text">
+            <h3>Abstract support</h3>
+            <p>et in touch with a human.</p>
+            <a href="">Learn More →</a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-nav">
+        <nav>
+          <h3>Abstract</h3>
+          <ul>
+            <li>Start trial</li>
+            <li>Pricing</li>
+            <li>Download</li>
+          </ul>
+        </nav>
+        <nav>
+          <h3>Resources</h3>
+          <ul>
+            <li>Blog</li>
+            <li>Help Center</li>
+            <li>Release Notes</li>
+            <li>Status</li>
+          </ul>
+        </nav>
+        <nav>
+          <h3>Community</h3>
+          <ul>
+            <li>Twitter</li>
+            <li>LinkedIn</li>
+            <li>Facebook</li>
+            <li>Dribble</li>
+            <li>Podcast</li>
+          </ul>
+        </nav>
+        <nav>
+          <h3>Company</h3>
+          <ul>
+            <li><a href="./src/about.html"> About Us </a></li>
+            <li>Careers</li>
+            <li>Legal</li>
+            <li>
+              <h4>Contact Us</h4>
+              <p>info@abstract.com</p>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-copyright">
+        <p>© Copyright 2024</p>
+        <p>Abstract Studio Design, Inc.</p>
+        <p>All rights reserved</p>
+      </div>
+    </footer>
+  </body>
 </html>
