Detailed description of changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p>Icon</p>
         <h1>Abstract | Help Center</h1>
       </div>
+      <!-- blah-blah-blah-->
       <div class="header-end">
         <button class="submit-btn">Submit a request</button>
         <button class="sign-in-btn">Sign in</button>
